--- a/package.xml
+++ b/package.xml
@@ -4,13 +4,17 @@
   <name>ros2_parameters</name>
   <version>0.0.0</version>
   <description>Assignment: ROS2 Parameters</description>
+
   <maintainer email="student@university.edu">Student Name</maintainer>
   <license>Apache-2.0</license>
 
+  <!-- Build Tool -->
   <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <!-- TODO: Add dependency for rclcpp -->
+  <!-- Dependencies -->
+  <depend>rclcpp</depend>
 
+  <!-- Testing Dependencies -->
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
